# magma

./: .bazelrc  BUILD.bazel  WORKSPACE.bazel
feg/cloud/go/protos/: BUILD.bazel
feg/cloud/go/protos/hlr/: BUILD.bazel
feg/cloud/go/protos/mconfig/: BUILD.bazel
feg/gateway/diameter/: BUILD.bazel
feg/gateway/gtp/: BUILD.bazel
feg/gateway/gtp/enriched_message/: BUILD.bazel
feg/gateway/multiplex/: BUILD.bazel
feg/gateway/object_store/: BUILD.bazel
feg/gateway/plmn_filter/: BUILD.bazel
feg/gateway/policydb/: BUILD.bazel
feg/gateway/policydb/mocks/: BUILD.bazel
feg/gateway/registry/: BUILD.bazel  cloud_registry.go  registry_test.go
feg/gateway/sbi/: BUILD.bazel
feg/gateway/sbi/mocks/: BUILD.bazel
feg/gateway/sbi/specs/TS29122AsSessionWithQoS/: BUILD.bazel
feg/gateway/sbi/specs/TS29122ChargeableParty/: BUILD.bazel
feg/gateway/sbi/specs/TS29122CommonData/: BUILD.bazel
feg/gateway/sbi/specs/TS29122CpProvisioning/: BUILD.bazel
feg/gateway/sbi/specs/TS29122DeviceTriggering/: BUILD.bazel
feg/gateway/sbi/specs/TS29122ECRControl/: BUILD.bazel
feg/gateway/sbi/specs/TS29122GMDviaMBMSbyMB2/: BUILD.bazel
feg/gateway/sbi/specs/TS29122GMDviaMBMSbyxMB/: BUILD.bazel
feg/gateway/sbi/specs/TS29122MonitoringEvent/: BUILD.bazel
feg/gateway/sbi/specs/TS29122MsisdnLessMoSms/: BUILD.bazel
feg/gateway/sbi/specs/TS29122NIDD/: BUILD.bazel
feg/gateway/sbi/specs/TS29122NpConfiguration/: BUILD.bazel
feg/gateway/sbi/specs/TS29122PfdManagement/: BUILD.bazel
feg/gateway/sbi/specs/TS29122ReportingNetworkStatus/: BUILD.bazel
feg/gateway/sbi/specs/TS29122ResourceManagementOfBdt/: BUILD.bazel
feg/gateway/sbi/specs/TS29502NsmfPDUSession/: BUILD.bazel
feg/gateway/sbi/specs/TS29503NudmEE/: BUILD.bazel
feg/gateway/sbi/specs/TS29503NudmPP/: BUILD.bazel
feg/gateway/sbi/specs/TS29503NudmSDM/: BUILD.bazel
feg/gateway/sbi/specs/TS29503NudmUEAU/: BUILD.bazel
feg/gateway/sbi/specs/TS29503NudmUECM/: BUILD.bazel
feg/gateway/sbi/specs/TS29505SubscriptionData/: BUILD.bazel
feg/gateway/sbi/specs/TS29507NpcfAMPolicyControl/: BUILD.bazel
feg/gateway/sbi/specs/TS29508NsmfEventExposure/: BUILD.bazel
feg/gateway/sbi/specs/TS29509NausfSoRProtection/: BUILD.bazel
feg/gateway/sbi/specs/TS29509NausfUEAuthentication/: BUILD.bazel
feg/gateway/sbi/specs/TS29509NausfUPUProtection/: BUILD.bazel
feg/gateway/sbi/specs/TS29510NnrfAccessToken/: BUILD.bazel
feg/gateway/sbi/specs/TS29510NnrfNFDiscovery/: BUILD.bazel
feg/gateway/sbi/specs/TS29510NnrfNFManagement/: BUILD.bazel
feg/gateway/sbi/specs/TS29512NpcfSMPolicyControl/: BUILD.bazel
feg/gateway/sbi/specs/TS29512NpcfSMPolicyControlServer/: BUILD.bazel
feg/gateway/sbi/specs/TS29514NpcfPolicyAuthorization/: BUILD.bazel
feg/gateway/sbi/specs/TS29518NamfCommunication/: BUILD.bazel
feg/gateway/sbi/specs/TS29518NamfEventExposure/: BUILD.bazel
feg/gateway/sbi/specs/TS29518NamfLocation/: BUILD.bazel
feg/gateway/sbi/specs/TS29518NamfMT/: BUILD.bazel
feg/gateway/sbi/specs/TS29519ApplicationData/: BUILD.bazel
feg/gateway/sbi/specs/TS29519ExposureData/: BUILD.bazel
feg/gateway/sbi/specs/TS29519PolicyData/: BUILD.bazel
feg/gateway/sbi/specs/TS29522TrafficInfluence/: BUILD.bazel
feg/gateway/sbi/specs/TS29531NnssfNSSAIAvailability/: BUILD.bazel
feg/gateway/sbi/specs/TS29531NnssfNSSelection/: BUILD.bazel
feg/gateway/sbi/specs/TS29551NnefPFDmanagement/: BUILD.bazel
feg/gateway/sbi/specs/TS29554NpcfBDTPolicyControl/: BUILD.bazel
feg/gateway/sbi/specs/TS29571CommonData/: BUILD.bazel
feg/gateway/sbi/specs/TS29572NlmfLocation/: BUILD.bazel
feg/gateway/sbi/specs/TS32291NchfConvergedCharging/: BUILD.bazel
feg/gateway/service_health/metrics/: BUILD.bazel
feg/gateway/services/csfb/: BUILD.bazel
feg/gateway/services/csfb/csfb/: BUILD.bazel
feg/gateway/services/csfb/servicers/: BUILD.bazel
feg/gateway/services/csfb/test_init/: BUILD.bazel
feg/gateway/services/eap/: BUILD.bazel
feg/gateway/services/eap/client/: BUILD.bazel
feg/gateway/services/eap/eap_router/: BUILD.bazel
feg/gateway/services/eap/protos/: BUILD.bazel
feg/gateway/services/eap/providers/: BUILD.bazel
feg/gateway/services/eap/test/: BUILD.bazel
feg/gateway/services/envoy_controller/: BUILD.bazel
feg/gateway/services/envoy_controller/control_plane/: BUILD.bazel
feg/gateway/services/envoy_controller/servicers/: BUILD.bazel
feg/gateway/services/feg_hello/: BUILD.bazel
feg/gateway/services/feg_hello/servicers/: BUILD.bazel
feg/gateway/services/gateway_health/: BUILD.bazel
feg/gateway/services/gateway_health/collection/: BUILD.bazel
feg/gateway/services/gateway_health/events/: BUILD.bazel
feg/gateway/services/gateway_health/gateway_health/: BUILD.bazel
feg/gateway/services/gateway_health/health_manager/: BUILD.bazel
feg/gateway/services/s6a_proxy/: BUILD.bazel
feg/gateway/services/s6a_proxy/metrics/: BUILD.bazel
feg/gateway/services/s6a_proxy/s6a_proxy/: BUILD.bazel
feg/gateway/services/s6a_proxy/servicers/: BUILD.bazel
feg/gateway/services/s6a_proxy/test_init/: BUILD.bazel
feg/gateway/services/s8_proxy/: BUILD.bazel
feg/gateway/services/s8_proxy/metrics/: BUILD.bazel
feg/gateway/services/s8_proxy/s8_proxy/: BUILD.bazel
feg/gateway/services/s8_proxy/servicers/: BUILD.bazel
feg/gateway/services/swx_proxy/: BUILD.bazel
feg/gateway/tools/gw_csfb_service_cli/: BUILD.bazel
feg/gateway/tools/gw_s6a_service_cli/: BUILD.bazel
feg/gateway/tools/gx_client_cli/: BUILD.bazel
feg/gateway/tools/gy_client_cli/: BUILD.bazel
feg/gateway/tools/hello_cli/: BUILD.bazel
feg/gateway/tools/hss_cli/: BUILD.bazel
feg/gateway/tools/s6a_cli/: BUILD.bazel
feg/gateway/tools/s8_cli/: BUILD.bazel
feg/gateway/tools/swx_cli/: BUILD.bazel
feg/radius/src/: BUILD.bazel
feg/radius/src/config/: BUILD.bazel
feg/radius/src/filters/: BUILD.bazel
feg/radius/src/filters/lbcanary/: BUILD.bazel
feg/radius/src/loader/: BUILD.bazel
feg/radius/src/modules/: BUILD.bazel
feg/radius/src/monitoring/: BUILD.bazel
feg/radius/src/server/: BUILD.bazel
feg/radius/src/session/: BUILD.bazel
orc8r/protos/: BUILD.bazel
(+606 files in other folders)
