load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "diameter",
    srcs = [
        "avp.go",
        "config.go",
        "connection.go",
        "connection_manager.go",
        "definitions.go",
        "diameter_client.go",
        "msg_definitions.go",
        "request_tracker.go",
        "requests.go",
        "util.go",
    ],
    importpath = "github.com/magma/magma/feg/gateway/diameter",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_fiorix_go_diameter_v4//diam:go_default_library",
        "@com_github_fiorix_go_diameter_v4//diam/avp:go_default_library",
        "@com_github_fiorix_go_diameter_v4//diam/datatype:go_default_library",
        "@com_github_fiorix_go_diameter_v4//diam/dict:go_default_library",
        "@com_github_fiorix_go_diameter_v4//diam/sm:go_default_library",
        "@com_github_fiorix_go_diameter_v4//diam/sm/smpeer:go_default_library",
        "@com_github_golang_glog//:glog",
        "@com_github_ishidawataru_sctp//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "diameter_test",
    srcs = [
        "avp_test.go",
        "connection_manager_test.go",
    ],
    embed = [":diameter"],
    deps = [
        "@com_github_fiorix_go_diameter_v4//diam:go_default_library",
        "@com_github_fiorix_go_diameter_v4//diam/avp:go_default_library",
        "@com_github_fiorix_go_diameter_v4//diam/datatype:go_default_library",
        "@com_github_fiorix_go_diameter_v4//diam/dict:go_default_library",
        "@com_github_fiorix_go_diameter_v4//diam/sm:go_default_library",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
