load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gtp",
    srcs = [
        "gtp_client.go",
        "handlers.go",
        "session_manager.go",
    ],
    importpath = "magma/feg/gateway/gtp",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_wmnsk_go_gtp//gtpv2:go_default_library",
        "@com_github_wmnsk_go_gtp//gtpv2/message:go_default_library",
    ],
)

go_test(
    name = "gtp_test",
    srcs = ["gtp_client_test.go"],
    embed = [":gtp"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_wmnsk_go_gtp//gtpv2:go_default_library",
        "@com_github_wmnsk_go_gtp//gtpv2/ie:go_default_library",
        "@com_github_wmnsk_go_gtp//gtpv2/message:go_default_library",
        "@org_golang_google_protobuf//runtime/protoiface",
    ],
)
