load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "src_lib",
    srcs = [
        "main.go",
        "main_test_manual.go",
    ],
    importpath = "github.com/magma/magma/feg/radius/src",
    visibility = ["//visibility:private"],
    deps = ["@org_uber_go_zap//:zap"],
)

go_binary(
    name = "src",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)
