# Copyright 2022 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "protos",
    srcs = [
        "envoy_controller.pb.go",
        # "basic_acct.pb.go",
        # "csfb.pb.go",
        # "health.pb.go",
        "hello.pb.go", # needed for testing
        # "hss_service.pb.go",
        # "mock_core.pb.go",
        # "mock_core_conversions.go",
        # "s6a_proxy.pb.go",
        # "s8_proxy.pb.go",
        # "service_health.pb.go",
        # "swx_proxy.pb.go",
    ],
    importpath = "magma/feg/cloud/go/protos",
    visibility = ["//visibility:public"],
    deps = [
        "//lte/cloud/go/protos",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        # "//lte/cloud/go/protos/oai",
        # "//orc8r/lib/go/protos",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        # "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
    ],
)
