load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "enriched_message",
    srcs = ["message.go"],
    importpath = "github.com/magma/magma/feg/gateway/gtp/enriched_message",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_wmnsk_go_gtp//gtpv2/message:go_default_library",
    ],
)
