load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "metrics",
    srcs = ["metrics.go"],
    importpath = "magma/feg/gateway/service_health/metrics",
    visibility = ["//visibility:public"],
    deps = ["@com_github_prometheus_client_golang//prometheus:go_default_library"],
)
