load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "csfb",
    srcs = ["csfb_client_api.go"],
    importpath = "magma/feg/gateway/services/csfb",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
    ],
)
