load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "feg_hello_lib",
    srcs = ["main.go"],
    importpath = "github.com/magma/magma/feg/gateway/services/feg_hello",
    visibility = ["//visibility:private"],
    deps = ["@com_github_golang_glog//:glog"],
)

go_binary(
    name = "feg_hello",
    embed = [":feg_hello_lib"],
    visibility = ["//visibility:public"],
)
