load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "s8_proxy",
    srcs = ["client_api.go"],
    importpath = "github.com/magma/magma/feg/gateway/services/s8_proxy",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "s8_proxy_test",
    srcs = ["client_api_test.go"],
    deps = ["@com_github_stretchr_testify//assert"],
)
