load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "swx_proxy",
    srcs = ["client_api.go"],
    importpath = "github.com/magma/magma/feg/gateway/services/swx_proxy",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "swx_proxy_test",
    srcs = ["client_api_test.go"],
    deps = ["@com_github_stretchr_testify//assert"],
)
