load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gw_csfb_service_cli_lib",
    srcs = ["main.go"],
    importpath = "github.com/magma/magma/feg/gateway/tools/gw_csfb_service_cli",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
    ],
)

go_binary(
    name = "gw_csfb_service_cli",
    embed = [":gw_csfb_service_cli_lib"],
    visibility = ["//visibility:public"],
)
