load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gw_s6a_service_cli_lib",
    srcs = ["main.go"],
    importpath = "magma/feg/gateway/tools/gw_s6a_service_cli",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "gw_s6a_service_cli",
    embed = [":gw_s6a_service_cli_lib"],
    visibility = ["//visibility:public"],
)
