load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gx_client_cli_lib",
    srcs = ["main.go"],
    importpath = "github.com/magma/magma/feg/gateway/tools/gx_client_cli",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "gx_client_cli",
    embed = [":gx_client_cli_lib"],
    visibility = ["//visibility:public"],
)
