load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gy_client_cli_lib",
    srcs = ["main.go"],
    importpath = "magma/feg/gateway/tools/gy_client_cli",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "gy_client_cli",
    embed = [":gy_client_cli_lib"],
    visibility = ["//visibility:public"],
)
