load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hello_cli_lib",
    srcs = ["main.go"],
    importpath = "magma/feg/gateway/tools/hello_cli",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "hello_cli",
    embed = [":hello_cli_lib"],
    visibility = ["//visibility:public"],
)
