load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hss_cli_lib",
    srcs = ["main.go"],
    importpath = "github.com/magma/magma/feg/gateway/tools/hss_cli",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "hss_cli",
    embed = [":hss_cli_lib"],
    visibility = ["//visibility:public"],
)
