load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "s6a_cli_lib",
    srcs = ["main.go"],
    importpath = "magma/feg/gateway/tools/s6a_cli",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "s6a_cli",
    embed = [":s6a_cli_lib"],
    visibility = ["//visibility:public"],
)
