load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "s8_cli_lib",
    srcs = [
        "main.go",
        "s8_client.go",
    ],
    importpath = "github.com/magma/magma/feg/gateway/tools/s8_cli",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_wmnsk_go_gtp//gtpv2:go_default_library",
    ],
)

go_binary(
    name = "s8_cli",
    embed = [":s8_cli_lib"],
    visibility = ["//visibility:public"],
)
