load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "swx_cli_lib",
    srcs = ["main.go"],
    importpath = "magma/feg/gateway/tools/swx_cli",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "swx_cli",
    embed = [":swx_cli_lib"],
    visibility = ["//visibility:public"],
)
